--- a/Corona-Warn-App/src/main/res/values-de/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-de/strings.xml
@@ -157,7 +157,7 @@
         <item quantity="other">%1$s Tage seit der letzten Begegnung</item>
     </plurals>
     <string name="risk_card_unknown_risk_headline">Unbekanntes Risiko</string>
-    <string name="risk_card_unknown_risk_body">Da Sie das Kontaktlogbuch noch nicht lange genug aktiviert haben, konnten wir für Sie kein Infektionsrisiko berechnen.</string>
+    <string name="risk_card_unknown_risk_body">Da Sie das Kontaktlogbuch noch  genug aktiviert haben, konnten wir für Sie kein Infektionsrisiko berechnen.</string>
     <string name="risk_card_no_calculation_possible_headline">Kontaktverfolgung angehalten</string>
     <string name="risk_card_no_calculation_possible_body_saved_risk">Letzte Kontaktverfolgung:<xliff:g id="line_break">\n</xliff:g>%1$s</string>
     <string name="risk_card_outdated_risk_headline">Kontaktverfolgung unmöglich</string>
