--- a/Corona-Warn-App/src/main/res/values-fr/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-fr/strings.xml
@@ -402,7 +402,7 @@
     <string name="submission_qr_code_scan_body"></string>
     <string name="submission_test_result_headline">Résultat du test</string>
     <string name="submission_test_result_subtitle">Comment cela fonctionne :</string>
-    <string name="submission_test_result_steps_added_heading">Test ajouté avec succès</string>
+    <string name="submission_test_result_steps_added_heading"></string>
     <string name="submission_test_result_steps_added_body">Votre test a été enregistré dans l’application Coronalert</string>
     <string name="submission_test_result_pending_steps_waiting_heading">Le résultat du test n\'est pas encore disponible</string>
     <string name="submission_test_result_pending_steps_waiting_body">Le résultat de votre test n\'est pas encore disponible.</string>
@@ -482,14 +482,14 @@
     <string name="submission_contact_step_1_content"></string>
     <string name="submission_contact_step_2_content"></string>
     <string name="submission_status_card_title_fetching">Données en cours de récupération....</string>
-    <string name="submission_status_card_title_unregistered">Liez votre test COVID à l\'app</string>
+    <string name="submission_status_card_title_unregistered">Recevez votre test COVID dans l\'app</string>
     <string name="submission_status_card_title_pending">Votre résultat n\'est pas encore disponible</string>
     <string name="submission_status_card_title_available">Votre résultat est disponible</string>
     <string name="submission_status_card_title_positive">Diagnostic positif</string>
     <string name="submission_status_card_subtitle_invalid">Test non valable</string>
     <string name="submission_status_card_subtitle_negative">Diagnostic négatif</string>
     <string name="submission_status_card_body_fetching">Votre résultat est mis à jour</string>
-    <string name="submission_status_card_body_unregistered">Générez le code et transmettez-le au praticien, remplissez le formulaire en ligne ou utilisez le SMS pour lier le résultat de votre test à l\'application.</string>
+    <string name="submission_status_card_body_unregistered"></string>
     <string name="submission_status_card_body_pending">L\'évaluation de votre test n\'est pas encore faite.</string>
     <string name="submission_status_card_body_invalid">Votre test n\'a pas pu être évalué.</string>
     <string name="submission_status_card_body_positive">Vous avez été diagnostiqué positif pour le SRAS-CoV-2.</string>
@@ -577,7 +577,7 @@
     <string name="submission_intro_symptoms_dialog_negative">Non</string>
     <string name="submission_test_request_headline">Générez le code</string>
     <string name="submission_test_request_text">Sélectionnez la date à laquelle vous avez commencé à avoir des symptômes.</string>
-    <string name="submission_test_request_save_text">Montrez ce numéro et cette date au médecin ou au laboratoire effectuant le test pour relier votre smartphone au test.</string>
+    <string name="submission_test_request_save_text">Veuillez à transmettre ce code au médecin car ceci est nécessaire pour assurer le lien entre votre test et votre application. Le lien ne se fait pas automatiquement dû au caractère anonyme de Coronalert. Si vous oubliez de transmettre le code, vous pouvez remplir le webform suivant.</string>
     <string name="submission_test_request_save_button_save">Fermer</string>
     <string name="submission_countries_selection_headline">Sélectionnez votre pays</string>
     <string name="submission_countries_selection_text">Si vous n\'étiez pas en Belgique à certaines des dates ci-dessous et que vous voulez partager cette information (de façon anonyme), veuillez sélectionner le pays dans lequel vous étiez à ces dates.</string>
@@ -649,7 +649,7 @@
     <string name="interoperability_configuration_second_section">À cette fin, l\'application télécharge chaque jour une liste d\'identifiants aléatoires de tous les utilisateurs qui ont eu un test positif et qui ont décidé d\'informer les autres utilisateurs en partageant leurs identifiants aléatoires. Cette liste est ensuite comparée aux identifiants aléatoires enregistrés par votre smartphone. Vous pouvez choisir de télécharger cette liste via WiFi; sinon une partie de votre budget de données mobiles sera consommée. Sachez que cela peut entraîner des frais d\'itinérance si vous quittez l\'UE.</string>
     <string name="interoperability_title">Journalisation des expositions transnationales</string>
 
-    <string name="tools_card_body">Découvrez plusieurs outils pour respecter les mesures COVID actuelles</string>
+    <string name="tools_card_body">Découvrez plusieurs outils pour lutter contre le COVID-19</string>
     <string name="tools_card_title">Boîte à outils</string>
     <string name="tools_title">Boîte à outils</string>
 
@@ -667,12 +667,12 @@
     <string name="tools_declaration_of_honour_title">Déclaration</string>
 
     <string name="tools_epidemiological_situation">Situation épidémiologique du COVID-19</string>
-    <string name="tools_register_to_be_vaccinated">Inscrivez-vous pour être vacciné</string>
+    <string name="tools_register_to_be_vaccinated">Inscrivez-vous sur la liste de réserve</string>
 
     <string name="tools_book_a_test">Réservez un test</string>
     <string name="tools_book_a_test_in_brussels">Réservez un test à Bruxelles</string>
 
-    <string name="submission_status_card_body_unregistered_warning">Cela nécessite une action manuelle pour des raisons d\'anonymat</string>
+    <string name="submission_status_card_body_unregistered_warning">Ceci nécessite une action manuelle du au caractère anonyme de Coronalert</string>
     <string name="submission_status_card_button_registered">J\'ai déjà fait mon test COVID</string>
     <string name="link_test_info_title">J\'ai déjà fait mon test COVID</string>
     <string name="link_test_info_intro">3 possibilités pour relier votre test</string>
@@ -681,6 +681,6 @@
         <item>Vous avez reçu ou allez recevoir un SMS. Cliquez sur le lien et completer le webform.</item>
         <item>Rendez-vous directement sur le webform pour encoder les 2 codes manuellement.</item>
     </string-array>
-    <string name="submission_test_request_save_headline">Donnez ce code pour votre réservation de test COVID</string>
+    <string name="submission_test_request_save_headline">Utilisez ce code pour enregistrer votre test dans l’application</string>
     <string name="submission_test_request_save_explanation">Essayez autant que possible de transmettre ce numéro au médecin qui prescrit le test, mais rassurez-vous, si vous oubliez vous aurez le moyen de le faire soit par webform si vous avec un code CPR, soit par SMS si votre test est lié à un compte CPTC.</string>
 </resources>
