--- a/Corona-Warn-App/src/main/res/values-de/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-de/strings.xml
@@ -266,7 +266,7 @@
     <string name="onboarding_test_accessibility_title">Einführung Seite 4 von 5: Wenn bei Ihnen COVID-19 diagnostiziert wird</string>
     <string name="onboarding_test_headline">Wenn bei Ihnen COVID-19 diagnostiziert wird,</string>
     <string name="onboarding_test_subtitle">... bitte melden Sie es in diesem Antrag. Die Weitergabe Ihrer Testergebnisse ist immer freiwillig und anonym. Wir ermutigen Sie daher, dies zu tun, um weiterhin die Gesundheit aller zu schützen.</string>
-    <string name="onboarding_test_body">Diese Informationen werden stets anonym und sicher behandelt. Ihr Name und Ihre persönlichen Daten werden nicht weitergegeben. An die Telefone der Personen, mit denen Sie engen Kontakt hatten und die die Anwendung benutzen, werden nur zufällige Kennungen gesendet. Dies wird es ihnen ermöglichen, ihr Risiko zu kennen, ohne den Ursprung des Risikos zu kennen. Sie werden auch Informationen über die zu befolgenden Schritte erhalten.</string>
+    <string name="onboarding_test_body">Diese Informationen werden stets anonym und sicher behandelt. Ihr Name und Ihre persönlichen Daten werden nicht weitergegeben. An die Telefone der Personen, mit denen Sie engen Kontakt hatten und die die Anwendung benutzen, werden nur Zufallscodes gesendet. Dies wird es ihnen ermöglichen, ihr Risiko zu kennen, ohne den Ursprung des Risikos zu kennen. Sie werden auch Informationen über die zu befolgenden Schritte erhalten.</string>
     <string name="onboarding_test_illustration_description">Eine verschlüsselte positive Testdiagnose wird an das System übertragen, das nun andere Nutzer warnt.</string>
     <string name="onboarding_notifications_accessibility_title">Einführung Seite 5 von 5: Warnungen erhalten, Risiken erkennen</string>
     <string name="onboarding_notifications_headline">Warnungen erhalten, Risiken erkennen</string>
@@ -402,7 +402,7 @@
     <string name="submission_qr_code_scan_body"></string>
     <string name="submission_test_result_headline">Testergebnis</string>
     <string name="submission_test_result_subtitle">Info zum Ablauf:</string>
-    <string name="submission_test_result_steps_added_heading">Test erfolgreich hinzugefügt</string>
+    <string name="submission_test_result_steps_added_heading"></string>
     <string name="submission_test_result_steps_added_body">Ihr Test wurde in Coronalert gespeichert.</string>
     <string name="submission_test_result_pending_steps_waiting_heading">Testergebnis noch nicht verfügbar</string>
     <string name="submission_test_result_pending_steps_waiting_body">Testergebnis noch nicht verfügbar.</string>
@@ -482,14 +482,14 @@
     <string name="submission_contact_step_1_content"></string>
     <string name="submission_contact_step_2_content"></string>
     <string name="submission_status_card_title_fetching">Datenabruf…</string>
-    <string name="submission_status_card_title_unregistered">Verknüpfen Sie Ihren COVID-Test mit der App</string>
+    <string name="submission_status_card_title_unregistered">Erhalten Sie Ihr Testergebnis in Ihrer App</string>
     <string name="submission_status_card_title_pending">Ergebnis liegt noch nicht vor</string>
     <string name="submission_status_card_title_available">Ihr Ergebnis liegt vor</string>
     <string name="submission_status_card_title_positive">Befund positiv</string>
     <string name="submission_status_card_subtitle_invalid">Fehlerhafter Test</string>
     <string name="submission_status_card_subtitle_negative">Befund negativ</string>
     <string name="submission_status_card_body_fetching">Das Ergebnis wird aktualisiert</string>
-    <string name="submission_status_card_body_unregistered">Generieren Sie den Code und senden Sie ihn an den Praktiker, füllen Sie das Online-Webformular aus oder verwenden Sie die SMS, um Ihr Testergebnis mit der App zu verknüpfen.</string>
+    <string name="submission_status_card_body_unregistered"></string>
     <string name="submission_status_card_body_pending">Die Auswertung Ihres Tests ist noch nicht abgeschlossen.</string>
     <string name="submission_status_card_body_invalid">Ihr Test konnte nicht ausgewertet werden.</string>
     <string name="submission_status_card_body_positive">Sie wurden positiv auf SARS-CoV-2 getestet.</string>
@@ -577,7 +577,7 @@
     <string name="submission_intro_symptoms_dialog_negative">Nein</string>
     <string name="submission_test_request_headline">Generieren Sie den Code</string>
     <string name="submission_test_request_text">Datum wählen, an dem Symptome entdeckt wurden.</string>
-    <string name="submission_test_request_save_text">Zeigen Sie diese Nummer und dieses Datum dem Arzt oder Labor, das den Test durchführt, um Ihr Smartphone mit dem Test zu verbinden.</string>
+    <string name="submission_test_request_save_text">Bitte geben Sie den Code zum Arzt, da dies notwendig ist Ihr Testergebnis für die App zu verknüpfen. Dies geschieht aufgrund der Anonymität der App nicht automatisch. Wenn Sie dies vergessen, können Sie Ihr Webformular ausfüllen.</string>
     <string name="submission_test_request_save_button_save">Schließen</string>
     <string name="submission_countries_selection_headline">Länder wählen</string>
     <string name="submission_countries_selection_text">Wenn Sie an allen aufgeführten Daten nicht in Belgien waren und diese Informationen (anonym) weitergeben möchten, bitte in der anzupassenden Zeile das Land, das Sie an diesem Datum besucht haben, antippen.</string>
@@ -616,7 +616,7 @@
     <string name="statistics_date_range" formatted="false">%s - %s</string>
     <string name="statistics_infected" formatted="false">%d tägliche Infektionen (%+d%%)</string>
     <string name="statistics_hospitalised" formatted="false">%d tägliche Krankenhausaufenthalte (%+d%%)</string>
-    <string name="statistics_deceased" formatted="false">%d tägliche verstorben (%+d%%)</string>
+    <string name="statistics_deceased" formatted="false">%d täglich Verstorben (%+d%%)</string>
     <string name="statistics_last_updated">Zuletzt aktualisiert am %s</string>
     <string name="submission_test_request_save_date_label">Datum der Infektiosität</string>
     <string name="submission_test_request_save_code_label">Code</string>
@@ -649,30 +649,30 @@
     <string name="interoperability_title">Transnationale Expositionsprotokollierung</string>
 
 
-    <string name="tools_card_body">Entdecken Sie verschiedene Tools, um die aktuellen COVID-Maßnahmen zu berücksichtigen</string>
+    <string name="tools_card_body">Entdecken Sie verschiedene Tools zur Bekämpfung von COVID-19</string>
     <string name="tools_card_title">Toolbox</string>
     <string name="tools_title">Toolbox</string>
 
-    <string name="tools_vaccination_information">Impfinformatik</string>
-    <string name="tools_test_reservation">Testreservering</string>
+    <string name="tools_vaccination_information">Informationen zur Impfung</string>
+    <string name="tools_test_reservation">Testreservierung</string>
     <string name="tools_quarantine_certification">Quarantäne-Zertifikat</string>
     <string name="tools_passenger_locator_form">Passagier-Lokalisierungsformular</string>
     <string name="tools_declaration_of_honour">Notwendige Reise - Ehrenwörtliche Erklärung</string>
     <string name="tools_test_center">Finden Sie ein Testzentrum</string>
 
-    <string name="tools_vaccination_information_title">Impfinformatik</string>
-    <string name="tools_test_reservation_title">Testreservering</string>
+    <string name="tools_vaccination_information_title">Informationen zur Impfung</string>
+    <string name="tools_test_reservation_title">Testreservierung</string>
     <string name="tools_quarantine_certification_title">Zertifikat</string>
-    <string name="tools_passenger_locator_form_title">POF</string>
+    <string name="tools_passenger_locator_form_title">PLF</string>
     <string name="tools_declaration_of_honour_title">Erklärung</string>
 
     <string name="tools_epidemiological_situation">COVID-19 Epidemiologische Situation</string>
-    <string name="tools_register_to_be_vaccinated">Registrieren Sie sich, um geimpft zu werden</string>
+    <string name="tools_register_to_be_vaccinated">Registrieren Sie sich für die Reserveliste</string>
 
-    <string name="tools_book_a_test">Testreservering</string>
-    <string name="tools_book_a_test_in_brussels">Buchen Sie einen Test in Brüssel</string>
+    <string name="tools_book_a_test">Testreservierung</string>
+    <string name="tools_book_a_test_in_brussels">Testreservierung in Brüssel</string>
 
-    <string name="submission_status_card_body_unregistered_warning">Dies erfordert aus Gründen der Anonymität eine manuelle Aktion</string>
+    <string name="submission_status_card_body_unregistered_warning">Dies erfordert aus Gründen der Anonymität manuelle Maßnahmen</string>
     <string name="submission_status_card_button_registered">COVID-Test bereits durchgeführt</string>
     <string name="link_test_info_title">COVID-Test bereits durchgeführt</string>
     <string name="link_test_info_intro">3 Möglichkeiten, Ihren Test zu verknüpfen</string>
@@ -681,6 +681,6 @@
         <item>Sie haben eine SMS erhalten oder werden diese erhalten. Klicken Sie auf den Link und füllen Sie das Webformular aus.</item>
         <item>Gehen Sie direkt zum Webformular, um die 2 Codes manuell zu codieren.</item>
     </string-array>
-    <string name="submission_test_request_save_headline">Geben Sie diesen Code für Ihre COVID-Testreservierung an</string>
+    <string name="submission_test_request_save_headline">Verwenden Sie diesen Code, um Ihren Test in der App zu registrieren</string>
     <string name="submission_test_request_save_explanation">Versuchen Sie so viel wie möglich, diese Nummer an den Arzt zu übermitteln, der den Test verschreibt. Seien Sie jedoch versichert, wenn Sie vergessen, dass Sie die Möglichkeit haben, dies entweder per Webformular zu tun, wenn Sie einen CPR-Code haben, oder per SMS, wenn Ihr Test durchgeführt wird im Zusammenhang mit einem CPTC-Konto.</string>
 </resources>
