--- a/Corona-Warn-App/src/main/res/values/strings.xml
+++ b/Corona-Warn-App/src/main/res/values/strings.xml
@@ -402,7 +402,7 @@
     <string name="submission_qr_code_scan_body"></string>
     <string name="submission_test_result_headline">Test Result</string>
     <string name="submission_test_result_subtitle">How this works:</string>
-    <string name="submission_test_result_steps_added_heading">Test added successfully</string>
+    <string name="submission_test_result_steps_added_heading"></string>
     <string name="submission_test_result_steps_added_body">Your test has been stored in Coronalert.</string>
     <string name="submission_test_result_pending_steps_waiting_heading">Test result is not yet available</string>
     <string name="submission_test_result_pending_steps_waiting_body">Your test result is not yet available.</string>
@@ -482,14 +482,14 @@
     <string name="submission_contact_step_1_content"></string>
     <string name="submission_contact_step_2_content"></string>
     <string name="submission_status_card_title_fetching">Data being retrieved....</string>
-    <string name="submission_status_card_title_unregistered">Link your COVID-test to the app</string>
+    <string name="submission_status_card_title_unregistered">Receive your test result in the app</string>
     <string name="submission_status_card_title_pending">Your result is not yet available</string>
     <string name="submission_status_card_title_available">Your result is available</string>
     <string name="submission_status_card_title_positive">Positive Diagnosis</string>
     <string name="submission_status_card_subtitle_invalid">Invalid test</string>
     <string name="submission_status_card_subtitle_negative">Negative Diagnosis</string>
     <string name="submission_status_card_body_fetching">You result is being updated</string>
-    <string name="submission_status_card_body_unregistered">Generate the code and transmit it to the practitioner, fill in the online webform or use the SMS to link your test result to the app.</string>
+    <string name="submission_status_card_body_unregistered"></string>
     <string name="submission_status_card_body_pending">The evaluation of your test is not yet done.</string>
     <string name="submission_status_card_body_invalid">Your test could not be evaluated.</string>
     <string name="submission_status_card_body_positive">You have been diagnosed positive for SARS-CoV-2.</string>
@@ -577,7 +577,7 @@
     <string name="submission_intro_symptoms_dialog_negative">No</string>
     <string name="submission_test_request_headline">Generate the code</string>
     <string name="submission_test_request_text">Select the date on which you started having symptoms.</string>
-    <string name="submission_test_request_save_text">Show this number and date to the doctor or lab performing the test to link your smartphone to the test.</string>
+    <string name="submission_test_request_save_text">Please give this code to the doctor. This is necessary to link your test to the app. This requires a manual action due to anonymity of the app. If you have forgotten to give the code, you can use the webform.</string>
     <string name="submission_test_request_save_button_save">Close</string>
     <string name="submission_countries_selection_headline">Select countries</string>
     <string name="submission_countries_selection_text">For each of the below dates, if you have not been in Belgium and you would like to share this information (anonymously), please select the country you visited on that date by tapping the line you want to change</string>
@@ -663,7 +663,7 @@
     <!-- XACT: interoperability (eu) - illustraction description, explanation image -->
     <string name="interoperability_eu_illustration_description" translatable="false">"A hand holds a smartphone. Europe and the European flag are illustrated in the background."</string>
 
-    <string name="tools_card_body">Discover several tools to respect current COVID-measures</string>
+    <string name="tools_card_body">Discover several tools to fight COVID-19</string>
     <string name="tools_card_title">Toolbox</string>
     <string name="tools_title">Toolbox</string>
 
@@ -681,7 +681,7 @@
     <string name="tools_declaration_of_honour_title">Sworn Statement</string>
 
     <string name="tools_epidemiological_situation">COVID-19 Epidemiological Situation</string>
-    <string name="tools_register_to_be_vaccinated">Register to be vaccinated</string>
+    <string name="tools_register_to_be_vaccinated">Register to the reserve list</string>
 
     <string name="tools_book_a_test">Book a Test</string>
     <string name="tools_book_a_test_in_brussels">Book a Test in Brussels</string>
@@ -701,7 +701,7 @@
     <string name="tools_declaration_of_honour_nl" translatable="false">Verklaring op eer</string>
     <string name="tools_declaration_of_honour_de" translatable="false">Ehrenwörtliche Erklärung</string>
 
-    <string name="submission_status_card_body_unregistered_warning">This needs a manual action because of reasons of anonymity</string>
+    <string name="submission_status_card_body_unregistered_warning">This requires a manual action due to anonymity of the app</string>
     <string name="submission_status_card_button_registered">I already did my COVID-test</string>
     <string name="link_test_info_title">I already did my COVID-test</string>
     <string name="link_test_info_intro">3 possibilities to link your test</string>
@@ -710,6 +710,6 @@
         <item>You have received or will receive an SMS. Click on the link and complete the webform.</item>
         <item>Go directly to the webform to encode the 2 codes manually.</item>
     </string-array>
-    <string name="submission_test_request_save_headline">Give this code for your COVID-test reservation</string>
+    <string name="submission_test_request_save_headline">Use this code to register your test into the app</string>
     <string name="submission_test_request_save_explanation">Try as much as possible to transmit this number to the doctor who prescribes the test, but rest assured, if you forget you will have the means to do it either by webform if you have a CPR code, or by SMS if your test is related to a CPTC account.</string>
 </resources>
